2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* include/javascript/pandora.js: set the title for the large
	modules.
	
	Fixes: #3609509

2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* extensions/agents_alerts.php, extensions/snmp_explorer.php,
	extensions/insert_data.php, extensions/net_tools.php,
	extensions/resource_exportation.php, extensions/system_info.php,
	extensions/pandora_logs.php, extensions/agents_modules.php,
	godmode/reporting/reporting_builder.item_editor.php,
	godmode/servers/manage_recontask_form.php,
	godmode/setup/gis_step_2.php,
	godmode/massive/massive_standby_alerts.php,
	godmode/massive/massive_operations.php,
	godmode/massive/massive_add_action_alerts.php,
	godmode/massive/massive_add_alerts.php,
	godmode/massive/massive_delete_agents.php,
	godmode/massive/massive_delete_action_alerts.php,
	operation/users/user_edit.php, operation/events/events_list.php,
	operation/integria_incidents/incident.list.php,
	operation/integria_incidents/incident.workunits.php,
	operation/tree.php, general/shortcut_bar.php: cleaned source code
	style.

2013-04-25 Miguel de Dios <miguel.dedios@artica.es>

	* general/shortcut_bar.php, general/main_menu.php,
	extensions/update_manager/update_pandora.php,
	extensions/plugin_registration.php, godmode/setup/gis_step_2.php,
	godmode/massive/massive_delete_alerts.php,
	godmode/alerts/alert_actions.php, godmode/tag/edit_tag.php,
	godmode/category/edit_category.php,
	godmode/agentes/configurar_agente.php,
	operation/snmpconsole/snmp_view.php,
	operation/search_graphs.getdata.php,
	operation/agentes/status_monitor.php: cleaned source code style.

2013-04-24 Miguel de Dios <miguel.dedios@artica.es>

	* operation/users/user_edit.php: fixed the call to function from
	enterprise in the open source installations.
	
	Fixes: #3611329

2013-04-24 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_reporting.php, include/functions_servers.php:
	fixed the set default value for "local_modules_rate".
	